# anesis

./: Cargo.toml  LICENSE.md  README.md  install.ps1  install.sh
.config/: nextest.toml
.github/workflows/: release.yml
npm/: README.md  install.js  package.json  wrapper.js
src/: cache.rs  completions.rs  config.rs  context.rs  lib.rs  main.rs  manifest.rs  paths.rs  upgrade.rs
src/addons/: cache.rs  detect.rs  install.rs  publish.rs  runner.rs  update.rs
src/addons/steps/: delete.rs  inject.rs  mod.rs
src/auth/: account.rs  login.rs  logout.rs  mod.rs  server.rs  token.rs
src/cli/: commands.rs  mod.rs
src/templates/: generator.rs  install.rs  loader.rs  mod.rs  publish.rs  update.rs
src/utils/: archive.rs  cleanup.rs  errors.rs  mod.rs  ui.rs
tests/: addon_cache.rs  addon_detect.rs  addon_install.rs  addon_lock.rs  addon_manifest.rs  addon_runner.rs  auth_login.rs  auth_logout.rs  auth_server.rs  auth_token.rs  cleanup_utils.rs  completions.rs  context.rs  errors.rs  fs_utils.rs  generator.rs  http_publish.rs  paths.rs  steps.rs  template_cache.rs  template_install.rs  template_types.rs  upgrade_helpers.rs  validate.rs
tests/common/: mod.rs
