[package]
name = "anesis"
version = "0.10.1"
edition = "2024"
authors = ["Maksym <maksymzhuk759@gmail.com>"]
description = "CLI for scaffolding projects from remote templates and extending them with project addons"
license-file = "LICENSE.md"
repository = "https://github.com/anesis-dev/anesis"
documentation = "https://docs.rs/anesis"
readme = "README.md"
keywords = ["cli", "scaffold", "template", "addon"]
categories = ["command-line-utilities", "development-tools"]

include = [
  "src/**/*",
  "templates/**/*",
  "Cargo.toml",
  "LICENSE.md",
  "README.md",
  "CHANGELOG.md",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "color", "string"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
inquire = "0.9.3"
indicatif = "0.18.3"
colored = "3.1.1"
tera = "1.19"
tokio = { version = "1.36", features = ["full"] }
walkdir = "2.4"
ignore = "0.4"
tempfile = "3.10"
fs_extra = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"
toml = "1.0.1"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
zip = "8.1.0"
tar = "0.4"
flate2 = "1.0"
anyhow = "1.0"
thiserror = "2.0.18"
glob = "0.3"
regex = "1.10"
semver = "1.0"
include_dir = "0.7"
dirs = "6.0"
which = "7"
ctrlc = "3.5.2"
chrono = "0.4.43"
comfy-table = "7"
axum = "0.8.8"
open = "5.3.3"
url = "2.5.8"
uuid = { version = "1", features = ["v4"] }
dialoguer = "0.12.0"
log = "0.4.29"
env_logger = "0.11.10"
dotenvy = "0.15.7"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "anesis"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
